--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "nucleo-f722-144-akashi02-talkthrough/murasaki"]
 	path = nucleo-f722-144-akashi02-talkthrough/murasaki
 	url = https://github.com/suikan4github/murasaki.git
+[submodule "nucleo-f746-144-akashi02-talkthrough/murasaki"]
+	path = nucleo-f746-144-akashi02-talkthrough/murasaki
+	url = https://github.com/suikan4github/murasaki.git
